skeplib/tests/fixtures/resolver/invalid/namespace_wildcard_import_conflict/main.sk
import a;
from b import *;
fn main() -> Int { return 0; }
